--- a/TKV2026_soubory/sheet005.htm
+++ b/TKV2026_soubory/sheet005.htm
@@ -93,7 +93,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=12 height=58 class=xl183 style='border-right:.5pt solid black;
+  <td colspan=12 height=58 class=xl177 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOČINA 2026 - VÍTĚZOVÉ - DIDO</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -130,7 +130,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl195 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
   border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
@@ -157,7 +157,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
@@ -313,19 +313,20 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#4F81BD;
-  mso-pattern:black none'>2</td>
+  mso-pattern:black none'>3</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -339,20 +340,20 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>2</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
-  [CZE056087]</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
+  [CZE063138]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#4F81BD;
-  mso-pattern:black none'>2</td>
+  mso-pattern:black none'>3</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -377,7 +378,7 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#4F81BD;
+  <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
   mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -392,19 +393,19 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
-  [CZE055580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Novák Radek [CZE049908]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#96B4D7;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -444,15 +445,14 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Babický Michal
-  [CZE063138]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -470,12 +470,12 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
-  [CZE084601]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -522,6 +522,82 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Rosecký Václav
+  [CZE084601]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Šulgovskij Alex
   [CZE064273]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -535,75 +611,6 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
