--- a/TKV2026_soubory/sheet006.htm
+++ b/TKV2026_soubory/sheet006.htm
@@ -46,12 +46,12 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=1277 style='border-collapse:
- collapse;table-layout:fixed;width:963pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1288 style='border-collapse:
+ collapse;table-layout:fixed;width:972pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=179 style='mso-width-source:userset;mso-width-alt:6546;
- width:134pt'>
+ <col class=xl70 width=190 style='mso-width-source:userset;mso-width-alt:6948;
+ width:143pt'>
  <col class=xl70 width=107 style='mso-width-source:userset;mso-width-alt:3913;
  width:80pt'>
  <col class=xl70 width=78 style='mso-width-source:userset;mso-width-alt:2852;
@@ -71,7 +71,7 @@ else
  <col class=xl70 width=50 span=8 style='width:38pt'>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
-  <td class=xl70 width=179 style='width:134pt'></td>
+  <td class=xl70 width=190 style='width:143pt'></td>
   <td class=xl70 width=107 style='width:80pt'></td>
   <td class=xl70 width=78 style='width:59pt'></td>
   <td class=xl70 width=70 style='width:53pt'></td>
@@ -91,7 +91,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=12 height=58 class=xl189 style='height:43.5pt'>TOUR KRAJE
+  <td colspan=12 height=58 class=xl183 style='height:43.5pt'>TOUR KRAJE
   VYSOČINA 2026 - VÍTĚZOVÉ - DO</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -124,7 +124,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl195 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
   border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
@@ -149,7 +149,7 @@ else
  </tr>
  <tr height=0 style='display:none'>
   <td class=xl70></td>
-  <td class=xl196 style='font-size:11.0pt;color:white;font-weight:700;
+  <td class=xl197 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   mso-background-source:auto;mso-pattern:#4F81BD none'>Hra</td>
@@ -330,11 +330,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>2</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -346,12 +346,60 @@ else
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>3</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>2</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Medová Marcela
+  [CZE039792]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -368,7 +416,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>4</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Procházka Petr
   [CZE071371]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -392,7 +440,30 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>5</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Navrátil Karel
   [CZE009044]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -416,15 +487,15 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Ptáček Radim [CZE071042]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -439,7 +510,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>7</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Mucha Jiří [CZE080692]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -462,30 +533,7 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Strašil Pavel [CZE015487]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>9</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
   [CZE055580]</td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
@@ -509,7 +557,77 @@ else
   <td class=xl70></td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>10</td>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kameník Roman [CZE059800]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Barták Martin [CZE084602]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Kopeček Ondřej
+  [CZE059905]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext'></td>
+  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
+  mso-pattern:black none'>1</td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+  <td class=xl70></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>15</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Fábera Jiří [CZE075508]</td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext'></td>
@@ -522,113 +640,6 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'></td>
   <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
   mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt;border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext'></td>
-  <td class=xl65 style='border:.5pt solid windowtext;background:#DCE6F1;
-  mso-pattern:black none'>1</td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl70 style='height:15.0pt'></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2342,7 +2353,7 @@ else
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=47 style='width:35pt'></td>
-  <td width=179 style='width:134pt'></td>
+  <td width=190 style='width:143pt'></td>
   <td width=107 style='width:80pt'></td>
   <td width=78 style='width:59pt'></td>
   <td width=70 style='width:53pt'></td>
